<!-- main_menu.xml -->
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"
        android:contentDescription="@string/action_refresh" />

    <item
        android:id="@+id/action_wifi"
        android:title="@string/action_wifi"
        android:icon="@drawable/ic_wifi"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/action_wifi" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        android:contentDescription="@string/action_settings" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never" />

</menu>
